@@ -2908,7 +2908,7 @@ create.desktop.icon=on
               <imagedata fileref="Images/hidetransitioncondition.gif"
                          format="GIF"/>
             </imageobject>
-          </inlinemediaobject> icons from the toolbar. </para>
+          </inlinemediaobject> icons from the toolbar.</para>
 
         <para>To configure if the text should be shown or hidden by default
         when editor is opened, use the following entry from<emphasis>
@@ -11628,6 +11628,9 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
           USE_FIRST_DEADLINE_TIME_FOR_LIMIT_IF_UNDEFINED</para>
 
           <para>- Not showing properties component by default</para>
+
+          <para>- Fix for displaying WorkflowProcess panel for the external
+          package's workflow process</para>
         </listitem>
 
         <listitem>
