@@ -1,4 +1,7 @@
 ###### TWE 5.4-1 RELEASED ######
+2016-04-26 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode: fix for displaying WorkflowProcess panel for the external package's workflow process
+
 2016-04-25 Sasa Bojanic <sasaboy@together.at>
    # New sub-section added to manual: "How to show transition conditions vs. names in the graph"
 
